# brainery

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
chrome-extension/: background.js  manifest.json  popup.css  popup.html  popup.js
chrome-extension/native/: com.kb.clipper.json  install_host.sh
scripts/: install.sh  uninstall.sh
skills/: SKILL.md
src/brainery/: __init__.py  __main__.py  cli.py  compile.py  config.py  extension.py  ingest.py  lint.py  query.py  search.py  server.py  service.py  setup_cmd.py  status.py  watch.py
src/brainery/llm/: __init__.py  anthropic.py  lmstudio.py  local.py  ollama.py  router.py
src/brainery/native/: kb_clipper.py
src/brainery/prompts/: compile.md  domains.json  lint.md  query.md
tests/: test_config.py  test_search.py
